GitVersion1/objects/Milestone__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BCOrderId__c</fullName>
        <formula>Project__r.BCOrderId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BigCommerce Order Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date_Flag__c</fullName>
        <formula>IF(Due_Date__c &lt;= TODAY() , 
IMAGE(&quot;img/samples/flag_red.gif&quot;,&quot;green&quot;,15,15), 
IMAGE(&quot;img/samples/flag_green.gif&quot;,&quot;red&quot;,15,15))</formula>
        <label>Due Date Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Group_Assigned_to__c</fullName>
        <formula>Project__r.Project_Group__r.Assigned_To__r.FirstName+&apos; &apos;+Project__r.Project_Group__r.Assigned_To__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Group Assigned to</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Group_Customer__c</fullName>
        <formula>Project__r.Project_Group__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Group Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Group_Sales_Consultant__c</fullName>
        <formula>Project__r.Project_Group__r.Sales_Consultant_New__r.FirstName+&apos; &apos;+Project__r.Project_Group__r.Sales_Consultant_New__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Group Sales Consultant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Group__c</fullName>
        <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+Project__r.Project_Group__c, Project__r.Project_Group__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <formula>IF( Project__r.Owner:Queue.Id != NULL, Project__r.Owner:Queue.QueueName, Project__r.Owner:User.FirstName+&apos; &apos;+Project__r.Owner:User.LastName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Group__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Milestone Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Milestone_Tasks</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Project__c</columns>
        <columns>Project_Group__c</columns>
        <columns>BCOrderId__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_To__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Milestone Tasks</label>
        <language>en_US</language>
        <sharedTo>
            <group>Marketing_Team_Public_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Milestone</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>